# OddsManager

./: .gitignore  README.md  app.py  cloud_hosting_bash  constants.py  create_news_sources_db.py  db.py  os_check.py  requirements.txt  settings_win.py  start_desktop.ps1  tweets_main.py  twitter_feed.py  utils.py
betting_outs/kalshi/: README.md  kalshi.py  kalshi_api.py  test_series.py
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/configs/: mm_KXTXSENDPRIMARYMOV_26MAR03_config.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/market_making_services/: install_combined_no_KXTX02R_26.sh  install_combined_no_KXTX33D_26.sh  install_mm_KXTXSENDPRIMARYMOV_26MAR03.sh
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: KALSHI_EXPIRATION_DIAGNOSTIC.md  app.js  index.html  (+1 more)
docs/: MARKET_MAKING_DEBUG_REVIEW.md  MARKET_MAKING_STRATEGY.md  VPS_DEPLOYMENT.md
documentation/: COMMANDS_QUICK_REFERENCE.md  DESKTOP_APP.md  news_sources_schema.sql
market_making/: __init__.py  bot.py  combined_no_KXTX02R_26.py  combined_no_KXTX23R_26.py  combined_no_KXTX33D_26.py  combined_no_bot.py  mm_KXTXSENDPRIMARYMOV_26MAR03.py
market_making_services/: install_combined_no_KXTX23R_26.sh
news/: README_LIST_MONITOR.md  headless_list_monitor.py  install_list_monitor_task.ps1  monitor_config.json  run_list_monitor.py  start_list_monitor.bat  tweets_api.py  twitter.js  x_list_monitor.js
tests/: __init__.py  test_specific_time_create_order.py
(+3 files in other folders)
