[package]
name = "odds-manager-desktop"
version = "0.1.0"
description = "OddsManager desktop app - monitors, news, and prediction markets"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "odds_manager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
opener = "0.6"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
